--- a/index.html
+++ b/index.html
@@ -355,8 +355,9 @@ to { opacity: 1; transform: translateY(0); }
 <body>
 <div class="hero">
 <!-- Image removed from here -->
+<div class="hero">
 <h1>DEEPU JAMES</h1>
-<p>Highly motivated Computer Science student, with skills in machine learning, Android app development, and real-time system integration. Strong organizational abilities and a track record of leveraging modern tools and algorithms to build innovative, impactful solutions.</p>
+<p>B.Tech CSE Student</p>
 <ul class="contact-list">
 <li><a href="mailto:deepujames089@gmail.com"><i class="fas fa-envelope"></i> deepujames089@gmail.com</a></li>
 <li><a href="tel:9660031068"><i class="fas fa-phone"></i> 9660031068</a></li>
@@ -364,6 +365,7 @@ to { opacity: 1; transform: translateY(0); }
 <li><a href="https://www.linkedin.com/in/deepu-j-89590723b" target="_blank"><i class="fab fa-linkedin"></i> deepu-j-89590723b</a></li>
 </ul>
 </div>
+
 
 <main class="container">
 <!-- About -->
@@ -511,3 +513,4 @@ observer.observe(section);
 </script>
 </body>
 </html>
+
